# tag_game

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: build_and_test.yaml
docs/: document.md
src/: CMakeLists.txt  disp.c  tagc.c  tags.c
src/libs/: CMakeLists.txt  communication.c  communication.h  game.c  game.h  setting.h  utils.c  utils.h
test/: CMakeLists.txt  TestCommunication.cpp  TestGame.cpp  TestUtils.cpp
